# taxpose

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPRODUCING.md  REPRODUCING_RELDIST.md  REPRODUCING_TAXPOSE.md  autobot.md  convert_demos_to_mp4.sh  convert_episodes.sh  convert_episodes_ffvi.sh  copy_and_unzip.sh  copy_ndf_unzip.sh  copy_rlbench_and_unzip.sh  download_all_ndf_train_data.sh  download_bottle_bowl_train_data.sh  download_data.sh  download_mug_train_data.sh  download_trained_mug_models.sh  eval_ndf.sh  eval_ndf_2.sh  eval_ndf_anchor2action.sh  eval_ndf_newly_trained.sh  goalcond-pm-objs-split.json  launch.sh  launch_autobot.sh  pyproject.toml  requirements-gpu.txt  search_existing_models.txt  search_existing_models_2rt6k4ra.txt  search_new_anchor2action_models.txt  search_newly_trained_models.txt  train_ndf.sh  train_ndf_ablation.sh  unconvert_demos_to_mp4.sh
.github/workflows/: build-container.yaml  build-site.yaml  compute-tag.yaml  deploy-site.yaml  merge-request.yaml  push.yaml  run-tests.yaml
configs/: _logging.yaml  datamodule.yaml  eval.yaml  eval_full_mug_ablation.yaml  eval_full_mug_place.yaml  eval_full_mug_standalone.yaml  eval_metrics.yaml  eval_rlbench.yaml  hydra_logging.yaml  pretraining.yaml  pretraining_mug_dgcnn.yaml  pretraining_new.yaml  search_grasp_arbit_eval_full_mug_place.yaml  search_trained_grasp_eval.yaml  train_mug_residual.yaml  train_mug_residual_ablation.yaml  train_ndf.yaml  train_ndf_multimodal.yaml
configs/ablation/: 0_no_disp_loss.yaml  1_no_corr_loss.yaml  2_no_cons_loss.yaml  3_no_disp_loss_combined.yaml  4_no_residuals.yaml  5_unweighted_svd.yaml  6_no_finetuning.yaml  7_no_pretraining.yaml  8_mlp.yaml  9_low_dim_embedding.yaml  taxpose.yaml
configs/benchmark/: ndf.yaml  real_world_mug.yaml  rlbench.yaml
configs/checkpoints/: pretraining.yaml
configs/commands/: _train_ndf.yaml  _train_rlbench.yaml  pretrain_dgcnn_bottle.yaml  pretrain_dgcnn_bowl.yaml  pretrain_dgcnn_mug.yaml  pretrain_dgcnn_rack.yaml  pretrain_dgcnn_slab.yaml  pretrain_dgcnn_table.yaml  pretrain_vn_dgcnn_bottle.yaml  pretrain_vn_dgcnn_bowl.yaml  pretrain_vn_dgcnn_gripper.yaml  pretrain_vn_dgcnn_mug.yaml  pretrain_vn_dgcnn_slab.yaml  pretrain_vn_dgcnn_table.yaml  train_dgcnn_bottle_grasp.yaml  train_mlat_bottle_grasp.yaml  train_mlat_bottle_place.yaml  train_mlat_bowl_grasp.yaml  train_mlat_bowl_place.yaml  train_mlat_mug_grasp.yaml  train_mlat_mug_place.yaml  train_taxpose_bottle_grasp.yaml  train_taxpose_bottle_place.yaml  train_taxpose_bowl_grasp.yaml  train_taxpose_bowl_place.yaml  train_taxpose_mug_grasp.yaml  train_taxpose_mug_place.yaml
configs/dataset/: _augmentations.yaml
configs/model/: _mlat.yaml  _taxpose.yaml  _taxposed.yaml  mlat.yaml  mlat_n256_ns.yaml  mlat_s100.yaml  mlat_s100_vnn.yaml  mlat_s256.yaml  mlat_s256_vnn.yaml  mlp.yaml  multilateration.yaml  release.yaml  taxpose.yaml  taxpose_all.yaml  taxpose_tc.yaml  taxposed.yaml  taxposed_mlat_s100.yaml
configs/object_class/: bottle.yaml  bowl.yaml  gripper.yaml  insert_onto_square_peg.yaml  mug.yaml  place_hanger_on_rack.yaml  rack.yaml  slab.yaml  table.yaml
configs/pose_dist/: arbitrary.yaml  upright.yaml
configs/relationship/: grasp.yaml  place.yaml
configs/task/: bottle_grasp.yaml  bottle_place.yaml  bowl_grasp.yaml  bowl_place.yaml  insert_onto_square_peg_place.yaml  mug_grasp.yaml  mug_place.yaml  phone_on_base_place.yaml  place_hanger_on_rack_place.yaml  put_toilet_roll_on_stand_place.yaml  solve_puzzle_place.yaml  stack_wine_grasp.yaml  stack_wine_place.yaml
docker/: entrypoint.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: aggregate_rlbench_results.ipynb  eval_results_table.ipynb  explore_ndf_dataset.ipynb  explore_rlbench_dataset.ipynb  explore_rlbench_demos.ipynb  inspect_real_world_dataset.ipynb  latex_stuff.tex  make_imgs.ipynb  mlat_iclr_2024_rebuttal_tables.ipynb  ndf_eval_results_table.ipynb  ndf_penetration_analysis.ipynb  penetration_analysis.ipynb  pm_placement.ipynb  rebuttal_results.ipynb  rlbench_make_demo_grid.ipynb  symmetric_cls.ipynb  vis_symmetries.ipynb  visualize_eval_imgs.ipynb  visualize_eval_predictions.ipynb  viz_final_eps.ipynb
scripts/: README.md  copy_ndf_unzip.sh  create_pm_dataset.py  create_rlbench_dataset.py  debug_headless.py  download_bottle_bowl_train_data.sh  download_trained_mug_models.sh  eval_metrics.py  eval_rlbench.py  evaluate_ndf_mug.py  evaluate_ndf_mug_ablation.py  evaluate_ndf_mug_standalone.py  generate_task_configs.py  get_results.py  merge_table.py  new_version.py  old_version.py  pretrain_embedding.py  reupload_artifact.py  run_parallel_evals.py  run_rlbench10_rollouts.sh  sample_action_surfaces.py  train_eval.sh  train_residual_flow.py  train_residual_flow_ablation.py  train_residual_flow_multimodal.py
taxpose/: train_pm_placement.py
taxpose/datasets/: augmentations.py  base.py  enums.py  env_mod_utils.py  ndf.py  ndf_dataset.py  ndf_pretraining.py  pm_placement.py  pm_placement_env.py  pm_splits.py  pm_utils.py  point_cloud_data_module.py  point_cloud_dataset.py  point_cloud_dataset_test.py  pretraining_point_cloud_data_module.py  pretraining_point_cloud_dataset.py  real_world_mug.py  rlbench.py  shapenet_pretraining.py  symmetry_utils.py  utils_to_delete.py
taxpose/models/: taxpose.py  taxpose_reasoning.py  transformer_flow.py  utils.py
taxpose/nets/: brian_chuer_model.py  dgcnn_gc.py  multimodal_transformer_flow.py  pointnet.py  taxposed_dgcnn.py  transformer_flow.py  transformer_flow_pm.py  tv_mlp.py  vn_dgcnn.py
taxpose/training/: equivariance_testing_model2.py  equivariant_feature_pretraining_module.py  flow_equivariance_training_module.py  (+6 more)
tests/: config_test.py  metrics_test.py  multilateration_test.py  pm_test.py  pretrain_test.py  train_test.py  vn_test.py
trained_models/: pretraining_bottle_embnn_weights.ckpt  pretraining_bowl_embnn_weights.ckpt  pretraining_gripper_embnn_weights.ckpt  pretraining_mug_embnn_weights.ckpt  pretraining_rack_embnn_weights.ckpt  pretraining_slab_embnn_weights.ckpt
(+636 files in other folders)
