[project]
name = "taxpose"
version = "0.1.0"
description = "TAX-Pose: Task-Specific Cross-Pose Estimation for Robot Manipulation"
readme = "README.md"
requires-python = ">=3.6, <3.10" # ndf_robot requires < 3.10 :(
license = { file = "LICENSE.txt" }
authors = [
  { email = "chuerp@andrew.cmu.edu", name = "Chuer Pan" },
  { email = "bokorn@andrew.cmu.edu", name = "Brian Okorn" },
  { email = "haolunz@andrew.cmu.edu", name = "Harry Zhang" },
  { email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" },
  { email = "dheld@andrew.cmu.edu", name = "David Held" },
]
dependencies = [
  # "chamferdist",
  "dgl",
  "dglgo",
  "h5py",
  "hydra-core",
  "imageio",
  "jupyterlab",
  "open3d",
  "opencv-python",
  "pybullet",
  "pyg_lib",
  "pytorch3d",
  "pytorch_lightning",
  "rpad-partnet-mobility-utils @ git+https://github.com/r-pad/partnet_mobility_utils.git",
  "rpad-pyg @ git+https://github.com/r-pad/pyg_libs.git",
  "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d.git",
  "torch",
  "torch_cluster",
  "torch-geometric",
  "torch_scatter",
  "torch_sparse",
  "torch_spline_conv",
  "wandb",
]

[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.10.0",
  "pre-commit == 3.3.1",
  "pylint == 2.17.4",
  "pytest < 8",          # Currently has an issue with pytest-lazy-fixture.
  "pytest-cov",
  "pytest-xdist",
  "types-tqdm",
]
build_docs = ["mkdocs-material", "mkdocstrings[python]"]
rlbench = [
  # These should be installed manually...
  # "pyrep",
  # "rlbench @ git+https://github.com/stepjam/RLBench.git",
  "rpad-rlbench-utils @ git+https://github.com/r-pad/rlbench_utils.git@5d6167cbb07c25242e3a87a5d5a896c05a7370a7",
]


# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools]
packages = ["taxpose", "third_party"]

[tool.setuptools.package-data]
taxpose = ["py.typed"]

[tool.black]
exclude = "third_party/*"

[tool.isort]
known_third_party = ["wandb"]
profile = "black"

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Uncomment this when you have imports for mypy to ignore.
[[tool.mypy.overrides]]
module = [
  "chamferdist.*",
  "cv2.*",
  "display.*",
  "dgl.*",
  "h5py.*",
  "joblib.*",
  "matplotlib.*",
  "ompl.*",
  "open3d.*",
  "pandas.*",
  "plotly.*",
  "pybullet.*",
  "pytorch3d.*",
  "rpad.rlbench_utils.*",
  "scipy.*",
  "torch_cluster.*",
  "torch_geometric.*",
  "torchvision.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--ignore=third_party/ -m 'not ndf_training and not pretraining and not ablations and not rlbench_training' -n 16"
testpaths = "tests"

[tool.pylint]
disable = [
  "C0103", # Invalid name.
  "C0114", # Missing module docstring.
  "C0115", # Missing class docstring.
  "C0116", # Missing function or method docstring.
]
known-third-party = ["wandb"]
